-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.4.1
-
None
-
3
-
11809
KIT recently upgraded their test servers to Lustre 2.4.1 and are getting errors similar to LU-3645:
Nov 25 08:09:03 pfscn2 kernel: : Lustre: pfscdat2-OST0000-osc-MDT0000: Connection to pfscdat2-OST0000 (at 172.26.17.4@o2ib) was lost; in progress operations using this service will wait for recovery to complete Nov 25 08:09:03 pfscn2 kernel: : LustreError: 12137:0:(osp_precreate.c:484:osp_precreate_send()) pfscdat2-OST0000-osc-MDT0000: can't precreate: rc = -107 Nov 25 08:10:39 pfscn2 kernel: : Lustre: pfscdat2-OST0000-osc-MDT0000: Connection restored to pfscdat2-OST0000 (at 172.26.17.3@o2ib)
What logs should we get to debug this issue? Any debug patches to apply?