LU-4313 osp: continue waiting for -ENOTCONN

in osp_precreate_reserve, -ENOTCONN should also be treated
as recoverable errors, such as -ENODEV, and continue waiting
the object to be created by OSP once it completes recovery.

Change-Id: I39b600eaacdb68f54c6ad7ecb417532bc0ad5e7b
Signed-off-by: Hongchao Zhang <hongchao.zhang@intel.com>
Reviewed-on: http://review.whamcloud.com/8415
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>